--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -26,7 +26,7 @@
     <div class="container-fluid">
 
       <div class="text-center">
-        <img src="{{ assetsUrl('https://lh3.googleusercontent.com/-hgrPIzo-xms/WwTmvaEqkQI/AAAAAAAAAAs/29HAL-JRLksv_MY8I_dRLdaaMV7XTbNEQCEwYBhgL/w140-h140-p/29702257.jpeg') }}" width=200 class="profile-pic">
+        <img src="https://lh3.googleusercontent.com/-hgrPIzo-xms/WwTmvaEqkQI/AAAAAAAAAAs/29HAL-JRLksv_MY8I_dRLdaaMV7XTbNEQCEwYBhgL/w140-h140-p/29702257.jpeg'" width=200 class="profile-pic">
         <h1>Axl Ivan</h1>
         <h3>Mobile App Developer</h3>
         <h5>Full Stack Web Developer</h5>
@@ -67,7 +67,7 @@
 
             <div class="row work-item-row">
               <div class="col-lg-8 col-lg-push-4">
-                <img src="img/jobbie1.png" class="img-responsive center-block">
+                <img src="img/mydeliverypal.png" class="img-responsive center-block">
               </div>
               <div class="col-lg-4 col-lg-pull-8">
                 <h2><a href="https://trackmiyens.com" target="blank">Track - Task</a></h2>
@@ -98,7 +98,7 @@
 
             <div class="row work-item-row">
               <div class="col-lg-8">
-                <img src="img/mydeliverypal.png" class="img-responsive center-block">
+                <img src="img/school-intel-pro-laptop.png" class="img-responsive center-block">
               </div>
               <div class="col-lg-4">
                 <h2><a href="https://appsbuildertech.com/school-intel-pro/" target="blank">School Intel Pro</a></h2>
