--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -37,7 +37,7 @@
 
             <div class="row work-item-row">
               <div class="col-lg-8">
-                <img src="img/" class="img-responsive center-block">
+                <img src="img/print-alive_3.png" class="img-responsive center-block">
               </div>
               <div class="col-lg-4">
                 <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Print Alive</a></h2>
