--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -41,18 +41,17 @@
               </div>
               <div class="col-lg-4">
                 <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Print Alive</a></h2>
-                <p>An Android application, iOS application and web application use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
+                <p>An Android application and iOS application use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
                 <h4>Technology</h4>
-                <p>Print Alive mobile application is built using React Native, with a node server that runs on Heroku. Integrating with the Google Sheets API for real-time statistics. Print Alive web application uses Laravel framework.</p>
+                <p>Print Alive mobile application is built using React Native, with Koa node as server that runs on Heroku. Integrating with the Google Sheets API for real-time statistics.</p>
               </div>
             </div>
             <div class="row text-center">
               <div class="col-xs-12">
                 <img src="img/techlogos/reactnative.png" class="techlogo" width="100">
+                <img src="img/techlogos/koa.png" class="techlogo" width="100">
                 <img src="img/techlogos/node.png" class="techlogo" width="100">
                 <img src="img/techlogos/heroku.png" class="techlogo" width="100">
-                <img src="img/techlogos/bootstrap.png" class="techlogo" width="100">
-                <img src="img/techlogos/laravel.png" class="techlogo" width="100">
               </div>
             </div>
             <div class="row text-center" style="margin:20px;">
@@ -73,21 +72,21 @@
                 <h2><a href="https://trackmiyens.com" target="blank">Track | Task</a></h2>
                 <p>A web application for managing tasks. It keep track on your employees tasks and give you real-time updates.</p>
                 <h4>Technology</h4>
-                <p>Track is built on Laravel framework, with Vue as its frontend, and a node SocketIO that acts as a server for serving real-time data.</p>
+                <p>Track is built on Laravel framework, with Vue as its frontend, and a node SocketIO that acts as a server for pushing real-time data.</p>
               </div>
             </div>
             <div class="row text-center">
               <div class="col-xs-12">
-                <img src="img/techlogos/node.png" class="techlogo" width="100">
-                <img src="img/techlogos/socketio.png" class="techlogo" width="100">
-                <img src="img/techlogos/heroku.png" class="techlogo" width="100">
-                <img src="img/techlogos/vue.svg" class="techlogo" width="100">
-                <img src="img/techlogos/bootstrap.png" class="techlogo" width="100">
                 <img src="img/techlogos/laravel.png" class="techlogo" width="100">
+                <img src="img/techlogos/bootstrap-logo.png" class="techlogo" width="100">
+                <img src="img/techlogos/vue.png" class="techlogo" width="100">
+                <img src="img/techlogos/socketio.png" class="techlogo" width="100">
+                <img src="img/techlogos/node.png" class="techlogo" width="100">
+                <img src="img/techlogos/heroku.png" class="techlogo" width="100">
               </div>
             </div>
             <div class="row text-center" style="margin:20px;">
-                <a class="btn btn-launch" href="https://trackmiyens.com" target="blank">Go to app</a>
+                <a class="btn btn-launch" href="https://trackmiyens.com" target="blank">Go to site</a>
             </div>
           </div>
       </div>
