--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -26,10 +26,10 @@
     <div class="container-fluid">
 
       <div class="text-center">
-        <img src="https://lh3.googleusercontent.com/-hgrPIzo-xms/WwTmvaEqkQI/AAAAAAAAAAs/29HAL-JRLksv_MY8I_dRLdaaMV7XTbNEQCEwYBhgL/w140-h140-p/29702257.jpeg'" width=200 class="profile-pic">
+        <img src="https://avatars1.githubusercontent.com/u/29702257?s=460&v=4'" width=200 class="profile-pic">
         <h1>Axl Ivan</h1>
-        <h3>Mobile App Developer</h3>
-        <h5>Full Stack Web Developer</h5>
+        <h3>Mobile Developer</h3>
+        <h5>Web Developer</h5>
       </div>
 
       <div class="row row-grey">
